--- a/DM_Assignments-master/assignment1/README
+++ b/DM_Assignments-master/assignment1/README
@@ -1,1 +1,1 @@
-In this assignments, Classification Trees, Bagging, and Random Forest are implemented and compared
+In this assignment, Classification Trees, Bagging, and Random Forest are implemented and compared.
